Major update to v2.0.0: Support for JSM Insight API
- Updated authentication to use Basic auth with email and API token
- Added automatic workspace ID discovery for JSM Insight API
- Fixed ESM compatibility issues
- Implemented endpoint fallback strategy
- Updated documentation and examples
- Improved error handling

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,24 @@
-# Atlassian Assets API Configuration
-# Replace these values with your actual Atlassian Assets API credentials
-ASSETS_BASE_URL=https://api.atlassian.com/assets
+# Atlassian JSM Insight (Assets) API Configuration
+# Replace these values with your actual Atlassian credentials
+
+# Required: Authentication credentials
+JIRA_EMAIL=your-email@example.com
 ASSETS_API_TOKEN=YOUR_API_TOKEN_HERE
+
+# Required: Jira instance information
+JIRA_INSTANCE=your-instance-name
+
+# Optional: Workspace ID (if not provided, it will be discovered automatically)
+# JIRA_WORKSPACE_ID=your-workspace-id
+
+# Optional: Legacy base URL (not recommended for new projects)
+# ASSETS_BASE_URL=https://api.atlassian.com/assets
 
 # Optional: Specify custom paths for the API specification and generated client
 # ASSETS_SPEC_FILE=./custom-assets-api.json
 # ASSETS_OUTPUT_DIR=./custom-client
+
+# Notes:
+# - To get an API token, visit: https://id.atlassian.com/manage-profile/security/api-tokens
+# - The JIRA_INSTANCE is the subdomain of your Atlassian instance URL (e.g., 'your-instance' from 'your-instance.atlassian.net')
+# - The workspace ID will be automatically discovered if not provided
