--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "clean:generated": "rimraf src/generated assets-openapi.json",
     "prebuild": "npm run clean",
     "prepare": "npm run build",
-    "start": "ts-node src/index.ts",
-    "download": "ts-node src/downloadAssetsApiSpec.ts",
-    "generate": "ts-node src/generateAssetsApiClient.ts",
-    "fix": "ts-node src/fixGeneratedCode.ts",
+    "start": "node --loader ts-node/esm src/index.ts",
+    "download": "node --loader ts-node/esm src/downloadAssetsApiSpec.ts",
+    "generate": "node --loader ts-node/esm src/generateAssetsApiClient.ts",
+    "fix": "node --loader ts-node/esm src/fixGeneratedCode.ts",
     "postgenerate": "npm run fix",
-    "example": "ts-node examples/basic-usage.ts",
-    "example:advanced": "ts-node examples/advanced-usage.ts",
+    "example": "node --loader ts-node/esm examples/basic-usage.ts",
+    "example:advanced": "node --loader ts-node/esm examples/advanced-usage.ts",
     "reset": "npm run clean && npm run clean:generated"
   },
   "keywords": [
@@ -35,7 +35,7 @@
   ],
   "author": "",
   "license": "MIT",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
