--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jira-assets-api-client",
-  "version": "1.0.0",
-  "description": "A Node.js library that automatically generates a TypeScript client for the Atlassian Assets API from the OpenAPI specification",
+  "version": "2.0.0",
+  "description": "A Node.js library that automatically generates a TypeScript client for the Atlassian JSM Insight (formerly Assets) API from the OpenAPI specification",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -27,6 +27,8 @@
   "keywords": [
     "jira",
     "assets",
+    "jsm",
+    "insight",
     "api",
     "openapi",
     "typescript",
