--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -26,13 +26,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Download API Specification
-        run: npm run download
-
-      - name: Generate API Client
-        run: npm run generate
-
-      - name: Build
+      - name: Build (includes downloading spec and generating client)
         run: npm run build
 
       - name: Publish to npm
