--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jira-insights-api",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "description": "A Node.js library that automatically generates a TypeScript client for the Atlassian JSM Insight API from the OpenAPI specification",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,11 +11,10 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "npm run clean && tsc && npm run generate-client",
     "clean": "rimraf dist",
     "clean:generated": "rimraf src/generated temp-generated assets-openapi.json",
-    "prebuild": "npm run clean",
-    "postbuild": "node --loader ts-node/esm dist/prebuild.js",
+    "generate-client": "node --loader ts-node/esm dist/prebuild.js",
     "prepare": "npm run build",
     "start": "node --loader ts-node/esm src/index.ts",
     "download": "node --loader ts-node/esm src/downloadAssetsApiSpec.ts",
