--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
     "resolveJsonModule": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "dist/generated", "temp-generated"]
+  "exclude": ["node_modules", "temp-generated"]
 }
